<resources>
    <string name="app_name">Scarjava</string>
    <string name="todo">TODO</string>
    <string name="slack_uername_scarnation">Slack uername: scarnation</string>
    <string name="name_nnnadiukwu_chidiebere_oscar">Name: Nnnadiukwu Chidiebere Oscar</string>
    <string name="track_coding_desig_mobile">Track: coding, desig, mobile</string>
    <string name="email_adress_nnadiukwuoscar_gmail_com">email adress: nnadiukwuoscar@gmail.com</string>
</resources>
